--- a/Blog.html
+++ b/Blog.html
@@ -104,9 +104,6 @@
                         <p>A bolsa de valores é um ambiente digital onde ocorrem a negociação de ações, títulos e outros
                             ativos. </p>
                     </a>
-                    <aside class="asideMobile">
-                        <p>e</p>
-                    </aside>
                     <a href="Materias/materia7.html" class="bloco T1">
                         <div class="imgMateria" id="M7" class="economiaT"></div>
                         <p class="temaM">Economia</p>
@@ -121,6 +118,9 @@
                         <p>Crédito é uma forma de compra rápida oferecida por bancos centrais que não precisa
                             necessariamente do dinheiro na hora.</p>
                     </a>
+                    <aside class="asideMobile">
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
+                    </aside>
                     <a href="Materias/materia9.html" class="bloco T3">
                         <div class="imgMateria" id="M9" class="endividamentoT"></div>
                         <p class="temaM">Endividamento</p>
@@ -128,9 +128,6 @@
                         <p>O endividamento acontece quando você não consegue arcar com os gastos e acaba adiando o
                             pagamento. </p>
                     </a>
-                    <aside class="asideMobile">
-                        <p>e</p>
-                    </aside>
                     <a href="Materias/materia1.html" class="bloco T2">
                         <div class="imgMateria" id="M1" class="educFinanceiraT"></div>
                         <p class="temaM">Educação financeira</p>
@@ -152,9 +149,6 @@
                         <p>Investimentos financeiros são aqueles onde você aplica o seu dinheiro visando um alto retorno
                             no futuro.</p>
                     </a>
-                    <aside class="asideMobile">
-                        <p>e</p>
-                    </aside>
                 </div>
                 <div id="areaAnuncios">
                     <div id="filtro">
@@ -179,16 +173,16 @@
                         </form>
                     </div>
                     <aside>
-                        <p>e</p>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
                     </aside>
                     <aside>
-                        <p>e</p>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
                     </aside>
                     <aside>
-                        <p>e</p>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
                     </aside>
                     <aside>
-                        <p>e</p>
+                        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
                     </aside>
                 </div>
             </article>
