--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
         </header>
         <section id="QuemSomosP">
             <h1>O que é a <strong>MONETIZE-SE</strong></h1>
-            <p>Breve descrição</p>
+            <p>Monetize-se é uma plataforma de gestão e venda de produtos de informação (produtos digitais) e de produtos físicos. A Monetize-se atua como intermediária entre consumidores, afiliados e produtores, realizando pagamentos e transações totalmente online</p>
             <div>
                 <ul>
                     <li><strong>Oferecemos</strong>
@@ -53,7 +53,7 @@
         </section>
         <section id="ServicosP">
             <h1>Nosso Serviços</h1>
-            <p>Breve descrição</p>
+            <p>A Monetize-se disponibiliza uma seção de loja online para que a hospedagem dos produtos seja feita dentro do site. Os links de vendas podem então ser vinculados a sites e blogs, ou até mesmo postados em redes sociais ou mensageiros instantâneos.  Oferecemos os seguintes serviços, cursos, apostilas e palestras nas escolas privadas e públicas.</p>
             <div>
                 <figure><img src="IMG/oQueOferecemos.jpg" alt=""></figure>
                 <ul>
