--- a/Materias/materia1.html
+++ b/Materias/materia1.html
@@ -29,7 +29,7 @@
     <main>
         <header>
             <h1>O que é educação financeira?</h1>
-            <h3>Tema</h3>
+            <h3>Educação Financeira</h3>
             <figure id="imgG">
                 <img src="../IMG/Materia1.jpg" alt="LogoDoBlog">
             </figure>
@@ -53,26 +53,29 @@
         <section id="Materias">
             <div id="ComAside">
                 <article>
-                    <a href="Materias/materia4.html">
-                        <div class="imgMateria" id="M4"></div>
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
+                    <a href="materia5.html" class="bloco T1">
+                        <div class="imgMateria" id="M5" class="economiaT"></div>
+                        <p class="temaM">Economia</p>
+                        <h4>O que é liquidez?</h4>
+                        <p>A liquidez é a capacidade que um bem ou investimento tem de ser transformado em dinheiro em
+                            mãos</p>
                     </a>
-                    <a href="Materias/materia5.html">
-                        <div class="imgMateria" id="M5"></div>
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
+                    <a href="materia9.html" class="bloco T3">
+                        <div class="imgMateria" id="M9" class="endividamentoT"></div>
+                        <p class="temaM">Endividamento</p>
+                        <h4>Endividamento</h4>
+                        <p>O endividamento acontece quando você não consegue arcar com os gastos e acaba adiando o
+                            pagamento. </p>
                     </a>
                     <aside>
                         <p>e</p>
                     </aside>
-                    <a href="Materias/Materia6.html">
-                        <div class="imgMateria" id="M6"></div>
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
+                    <a href="materia2.html" class="bloco T4">
+                        <div class="imgMateria" id="M2" class="investimentosT"></div>
+                        <p class="temaM">Investimentos</p>
+                        <h4>O que é investimentos?</h4>
+                        <p>É a ação de aplicar o seu dinheiro visando receber lucros no futuro. O investimento faz parte
+                            do planejamento financeiro e deve buscar atender os seus objetivos.</p>
                     </a>
                 </article>
             </div>
