--- a/Materias/materia3.html
+++ b/Materias/materia3.html
@@ -29,7 +29,7 @@
     <main>
         <header>
             <h1>Tipos de investimentos</h1>
-            <h3>Tema</h3>
+            <h3>Investimentos</h3>
             <figure id="imgG">
                 <img src="../IMG/Materia3.jpg" alt="LogoDoBlog">
             </figure>
@@ -66,26 +66,29 @@
         <section id="Materias">
             <div id="ComAside">
                 <article>
-                    <a href="Materias/materia4.html">
-                        <div class="imgMateria" id="M4"></div>
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
+                    <a href="Materias/materia4.html" class="bloco T4">
+                        <div class="imgMateria" id="M4" class="investimentosT"></div>
+                        <p class="temaM">Investimentos</p>
+                        <h4>Poupança</h4>
+                        <p>Poupar é uma forma tradicional de investir e não envolve riscos. A finalidade da poupança é
+                            guardar recursos fixos para usar em um determinado fim.</p>
                     </a>
-                    <a href="Materias/materia5.html">
-                        <div class="imgMateria" id="M5"></div>
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
+                    <a href="Materias/materia7.html" class="bloco T1">
+                        <div class="imgMateria" id="M7" class="economiaT"></div>
+                        <p class="temaM">Economia</p>
+                        <h4>Juros e inflação</h4>
+                        <p>Juros é a porcentagem que é cobrada a partir do empréstimo do dinheiro, e a inflação são os
+                            aumentos nos valores de bem que ocorrem em alguns períodos. </p>
                     </a>
                     <aside>
                         <p>e</p>
                     </aside>
-                    <a href="Materias/Materia6.html">
-                        <div class="imgMateria" id="M6"></div>
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
+                    <a href="Materias/materia2.html" class="bloco T4">
+                        <div class="imgMateria" id="M2" class="investimentosT"></div>
+                        <p class="temaM">Investimentos</p>
+                        <h4>O que é investimentos?</h4>
+                        <p>É a ação de aplicar o seu dinheiro visando receber lucros no futuro. O investimento faz parte
+                            do planejamento financeiro e deve buscar atender os seus objetivos.</p>
                     </a>
                 </article>
             </div>
