--- a/Materias/materia6.html
+++ b/Materias/materia6.html
@@ -29,7 +29,7 @@
     <main>
         <header>
             <h1>Bolsa de Valores</h1>
-            <h3>Tema</h3>
+            <h3>Economia</h3>
             <figure id="imgG">
                 <img src="../IMG/Materia6.jpg" alt="LogoDoBlog">
             </figure>
@@ -69,26 +69,29 @@
         <section id="Materias">
             <div id="ComAside">
                 <article>
-                    <a href="Materias/materia4.html">
-                        <div class="imgMateria" id="M4"></div>
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
+                    <a href="Materias/materia5.html" class="bloco T1">
+                        <div class="imgMateria" id="M5" class="economiaT"></div>
+                        <p class="temaM">Economia</p>
+                        <h4>O que é liquidez?</h4>
+                        <p>A liquidez é a capacidade que um bem ou investimento tem de ser transformado em dinheiro em
+                            mãos</p>
                     </a>
-                    <a href="Materias/materia5.html">
-                        <div class="imgMateria" id="M5"></div>
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
+                    <a href="Materias/materia1.html" class="bloco T2">
+                        <div class="imgMateria" id="M1" class="educFinanceiraT"></div>
+                        <p class="temaM">Educação financeira</p>
+                        <h4>O que é educação financeira?</h4>
+                        <p>A educação financeira abrange todos os conhecimentos sobre finanças e está relacionada
+                            diretamente ao mercado econômico atual.</p>
                     </a>
                     <aside>
                         <p>e</p>
                     </aside>
-                    <a href="Materias/Materia6.html">
-                        <div class="imgMateria" id="M6"></div>
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
+                    <a href="Materias/materia7.html" class="bloco T1">
+                        <div class="imgMateria" id="M7" class="economiaT"></div>
+                        <p class="temaM">Economia</p>
+                        <h4>Juros e inflação</h4>
+                        <p>Juros é a porcentagem que é cobrada a partir do empréstimo do dinheiro, e a inflação são os
+                            aumentos nos valores de bem que ocorrem em alguns períodos. </p>
                     </a>
                 </article>
             </div>
