--- a/Materias/materia8.html
+++ b/Materias/materia8.html
@@ -29,7 +29,7 @@
     <main>
         <header>
             <h1>Crédito</h1>
-            <h3>Tema</h3>
+            <h3>Endividamento</h3>
             <figure id="imgG">
                 <img src="../IMG/Materia8.jpg" alt="LogoDoBlog">
             </figure>
@@ -70,26 +70,29 @@
         <section id="Materias">
             <div id="ComAside">
                 <article>
-                    <a href="Materias/materia4.html">
-                        <div class="imgMateria" id="M4"></div>
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
+                    <a href="Materias/materia9.html" class="bloco T3">
+                        <div class="imgMateria" id="M9" class="endividamentoT"></div>
+                        <p class="temaM">Endividamento</p>
+                        <h4>Endividamento</h4>
+                        <p>O endividamento acontece quando você não consegue arcar com os gastos e acaba adiando o
+                            pagamento. </p>
                     </a>
-                    <a href="Materias/materia5.html">
-                        <div class="imgMateria" id="M5"></div>
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
+                    <a href="Materias/materia4.html" class="bloco T4">
+                        <div class="imgMateria" id="M4" class="investimentosT"></div>
+                        <p class="temaM">Investimentos</p>
+                        <h4>Poupança</h4>
+                        <p>Poupar é uma forma tradicional de investir e não envolve riscos. A finalidade da poupança é
+                            guardar recursos fixos para usar em um determinado fim.</p>
                     </a>
                     <aside>
                         <p>e</p>
                     </aside>
-                    <a href="Materias/Materia6.html">
-                        <div class="imgMateria" id="M6"></div>
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
+                    <a href="Materias/materia7.html" class="bloco T1">
+                        <div class="imgMateria" id="M7" class="economiaT"></div>
+                        <p class="temaM">Economia</p>
+                        <h4>Juros e inflação</h4>
+                        <p>Juros é a porcentagem que é cobrada a partir do empréstimo do dinheiro, e a inflação são os
+                            aumentos nos valores de bem que ocorrem em alguns períodos. </p>
                     </a>
                 </article>
             </div>
