--- a/Materias/materia9.html
+++ b/Materias/materia9.html
@@ -57,26 +57,29 @@
         <section id="Materias">
             <div id="ComAside">
                 <article>
-                    <a href="Materias/materia4.html">
-                        <div class="imgMateria" id="M4"></div>
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
+                    <a href="Materias/materia8.html" class="bloco T3">
+                        <div class="imgMateria" id="M8" class="endividamentoT"></div>
+                        <p class="temaM">Endividamento</p>
+                        <h4>Crédito</h4>
+                        <p>Crédito é uma forma de compra rápida oferecida por bancos centrais que não precisa
+                            necessariamente do dinheiro na hora.</p>
                     </a>
-                    <a href="Materias/materia5.html">
-                        <div class="imgMateria" id="M5"></div>
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
+                    <a href="Materias/materia1.html" class="bloco T2">
+                        <div class="imgMateria" id="M1" class="educFinanceiraT"></div>
+                        <p class="temaM">Educação financeira</p>
+                        <h4>O que é educação financeira?</h4>
+                        <p>A educação financeira abrange todos os conhecimentos sobre finanças e está relacionada
+                            diretamente ao mercado econômico atual.</p>
                     </a>
                     <aside>
                         <p>e</p>
                     </aside>
-                    <a href="Materias/Materia6.html">
-                        <div class="imgMateria" id="M6"></div>
-                        <p class="temaM">Tema</p>
-                        <h4>titulo</h4>
-                        <p>categoria categoria categoria categoria</p>
+                    <a href="Materias/materia5.html" class="bloco T1">
+                        <div class="imgMateria" id="M5" class="economiaT"></div>
+                        <p class="temaM">Economia</p>
+                        <h4>O que é liquidez?</h4>
+                        <p>A liquidez é a capacidade que um bem ou investimento tem de ser transformado em dinheiro em
+                            mãos</p>
                     </a>
                 </article>
             </div>
