--- a/Servicos.html
+++ b/Servicos.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="IMG/Logos/IconAz.ico" type="image/x-icon">
-    <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/Responsividade.css">
+    <link rel="stylesheet" href="CSS/servicos.css">
+    <link rel="stylesheet" href="CSS/Resposividade/servicosR.css">
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
         async defer></script>
@@ -27,6 +27,35 @@
         </ul>
     </nav>
     <main>
+        <section id="Servicos">
+            <h1>Nosso Serviços</h1>
+            <p>todos os nossos serviços têm como princípio criar uma mentalidade objetiva sobre finanças, visando a qualidade de vida de quem consumiu os serviços e os colocou em prática, de forma correta e consciente</p>
+            <article>
+                <h2>Curso</h2>
+                <p>Curso aplicado a área de finanças, o qual contará com os seguintes conteúdos, História das finanças e perfil financeiro, Análise e controle financeiro, Gastos fixos e variáveis, Investimentos, Bolsa de valores, Planejamento, Sustentabilidade, Bancos digitais – compras online, Crédito, Tributação.</p>
+                <div>
+                    <h3>Preço</h3>
+                    <p class="Precos"><span><span class="sifrao">R$</span>280,00</span> (unitário)</p>
+                </div>
+            </article>
+            <article>
+                <h2>Palestra</h2>
+                <p>Nas palestras serão abordados alguns princípios básicos de educação financeira, para alunos no ensino médio, introduzindo esses ao mundo econômico atual e mostrando situações em que eles a utilizarão.</p>
+                <div>
+                    <h3>Preço</h3>
+                    <p class="Precos"><span><span class="sifrao">R$</span>2000,00</span> (pacote escola)</p>
+                </div>
+            </article>
+            <article>
+                <h2>Oficina</h2>
+                <p>Será um curso presencial, que será ministrada por um dos nossos professores para as escolas participantes desse projeto, de forma bem didática propondo às jovens atividades em que eles desenvolverão o senso crítico em como deverão utilizar seu dinheiro.</p>
+                <div>
+                    <h3>Preço</h3>
+                    <p class="Precos"><span><span class="sifrao">R$</span>4000,00</span> (pacote escola)</p>
+                </div>
+            </article>
+            <p id="rodapeDoServ">Para maiores detalhes entre em contato</p>
+        </section>
         <section id="Newsletter">
             <article>
                 <h1>Assine nossa <span>Newsletter</span></h1>
