--- a/Materias/materia5.html
+++ b/Materias/materia5.html
@@ -10,6 +10,7 @@
     <script
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
         async defer></script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
     <title>Monetize-se - O que é liquidez?</title>
 </head>
 
