--- a/Materias/materia2.html
+++ b/Materias/materia2.html
@@ -7,9 +7,8 @@
     <link rel="shortcut icon" href="../IMG/Logos/IconAz.ico" type="image/x-icon">
     <link rel="stylesheet" href="../CSS/materias.css">
     <link rel="stylesheet" href="../CSS/Resposividade/MateriaR.css">
-    <script
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa"
-        async defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYd3kp-fofWN98HdMSDcHVKwydHv-CLYg&callback=inicializarMapa" async defer></script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7044953387412944" crossorigin="anonymous"></script>
     <title>Monetize-se - O que é investimentos?</title>
 </head>
 
